--- a/Projeto/app/src/main/res/layout/listar_cliente_item.xml
+++ b/Projeto/app/src/main/res/layout/listar_cliente_item.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -10,6 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/beje"
+            android:layout_margin="5dp"
+            app:cardCornerRadius="40dp"
+            app:cardElevation="4dp">
+
     <TextView
         android:id="@+id/txtItemLista"
         android:layout_width="match_parent"
@@ -17,5 +27,6 @@
         android:text="ID, Nome do Cliente"
         android:layout_margin="16dp"
         android:textColor="#148F84"/>
+        </androidx.cardview.widget.CardView>
     </ScrollView>
 </androidx.appcompat.widget.LinearLayoutCompat>
