--- a/Projeto/app/src/main/res/layout/listar_cliente_item.xml
+++ b/Projeto/app/src/main/res/layout/listar_cliente_item.xml
@@ -12,6 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:src="@drawable/perfil_card"/>
+
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -28,5 +38,6 @@
         android:layout_margin="16dp"
         android:textColor="#148F84"/>
         </androidx.cardview.widget.CardView>
+        </LinearLayout>
     </ScrollView>
 </androidx.appcompat.widget.LinearLayoutCompat>
