--- a/Projeto/app/src/main/res/values/styles.xml
+++ b/Projeto/app/src/main/res/values/styles.xml
@@ -1,11 +1,11 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/beje</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -16,5 +16,20 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="botaoCustomizado" parent="Widget.AppCompat.Button">
+
+        <item name="android:textColor">#FFF</item>
+        <item name="android:backgroundTint" tools:targetApi="lollipop">#FF5722</item>
+
+    </style>
+
+    <style name="botaoDesatCustomizado" parent="Widget.AppCompat.Button.Borderless.Colored">
+
+        <item name="android:textColor">#000000</item>
+        <item name="android:backgroundTint" tools:targetApi="lollipop">#FF7E56</item>
+
+
+    </style>
 
 </resources>
